Fix loader on IOS

--- a/wp-content/themes/warnermusic/assets/scss/base/_global.scss
+++ b/wp-content/themes/warnermusic/assets/scss/base/_global.scss
@@ -564,13 +564,18 @@ body {
   }
 }
 .loader-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   width: 50%;
+  height: 100%;
   max-width: 768px;
-  height: auto;
   display: block;
-  @include desktop {
-    width: 80%;
-    max-width: 80%;
+  margin: 0;
+  @include translate(-50%, -50%);
+  video {
+    width: 100%;
+    height: 100%;
   }
   @include tablet {
     width: 100%;
